Fix UI overlap and double click bugs

--- a/public/style.css
+++ b/public/style.css
@@ -237,7 +237,7 @@ header {
 
 .shop {
     position: absolute;
-    bottom: 20px;
+    bottom: 90px;
     right: 20px;
     padding: 20px;
     width: 300px;
